--- a/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
@@ -5,7 +5,7 @@
 }
 <h2>@Html.DisplayFor(model=>model.Name)</h2>
 
-<div>
+<div class="row">
     <div class="col-md-2">
         <img class="img-responsive" src="~/Content/ProductImages/@Model.Image">
     </div>
@@ -42,4 +42,6 @@
   
 </div>
 
-<div class="col-md-12 clearfix"></div>
+<div class="row">
+    <div class="col-md-12 clearfix"></div>
+</div>
