--- a/MyShop/MyShop.WebUI/Views/Home/Index.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyShop.Core.Models.Product>
+﻿@model MyShop.Core.ViewModels.ProductListViewModel
 
 @{
     ViewBag.Title = "Home Page";
@@ -6,25 +6,43 @@
 
 <h1>Products</h1>
 
-@foreach (var item in Model)
-{
-<div class="col-md-4" style="height: 450px; padding: 10px; margin: 10px; border: solid thin whitesmoke">
-    <div class="col-md-12">
-        <img class="img" style="height: 250px" src="~/Content/ProductImages/@item.Image" />
-    </div>
-    <div class="col-md-12">
-        <strong>@Html.ActionLink(item.Name, "Details", new { id = item.Id })</strong>
-    </div>
-    <div class="col-md-12">
-        <p>@item.Description</p>
-    </div>
-    <div class="col-md-12">
-        <h4>@item.Price</h4>
-    </div>
-    <div class="col-md-12">
-        ,<button href="#" class="btn btn-default">Add to Basket</button>
+<div class="col-md-2">
+    <h4>Filter By Category</h4>
+    <div class="list-group">
+        @Html.ActionLink("All", "Index", null, new { @class = Request["Category"] == null ? "list-group-item active" : "list-group-item" })
+
+        @foreach (var cat in Model.ProductCategories)
+        {
+            @Html.ActionLink(cat.Category, "Index", new { Category = cat.Category }, new { @class = Request["Category"] == cat.Category? "list-group-item active" : "list-group-item" })
+        }
     </div>
 </div>
-}
+<div class="col-md-10">
 
-<div class="col-md-12 clearfix" ></div>
+    <div class="row">
+        @foreach (var item in Model.Products)
+        {
+            <div class="col-md-4" style="height: 450px; padding: 10px; margin: 10px; border: solid thin whitesmoke">
+                <div class="col-md-12">
+                    <img class="img" style="height: 250px" src="~/Content/ProductImages/@item.Image"/>
+                </div>
+                <div class="col-md-12">
+                    <strong>@Html.ActionLink(item.Name, "Details", new { id = item.Id })</strong>
+                </div>
+                <div class="col-md-12">
+                    <p>@item.Description</p>
+                </div>
+                <div class="col-md-12">
+                    <h4>@item.Price</h4>
+                </div>
+                <div class="col-md-12">
+                    ,<button href="#" class="btn btn-default">Add to Basket</button>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12 clearfix"></div>
+</div>
