--- a/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
@@ -33,7 +33,7 @@
             </dt>
 
             <dd>
-                <a href="#" class="btn btn-default">Add To Basket</a>
+                <a href="@Url.Action("AddToBasket", "Basket", new { Id = Model.Id})" class="btn btn-default">Add To Basket</a>
             </dd>
 
             <dd>@Html.ActionLink("Back to List", "Index")</dd>
